--- a/.env
+++ b/.env
@@ -6,13 +6,13 @@
 PUID=1000
 PGID=1000
 
-TIME_ZONE=Europe/Copenhagen
+TIME_ZONE=Europe/Amsterdam
 
 # This is the username and password for basic authentication
 # for Sonarr, Radarr, Rtorrent, Jackett, Tautulli and Traefik dashboard.
 # You can create your user:password string with the following docker command.
 #
-# docker run -it --rm httpd bash -c "htpasswd -nB user"
+# docker run -it --rm httpd bash -c "htpasswd -nB void"
 
 BASIC_AUTH=user:$2y$05$GsNMAR3c5Nxr32v//38L1eWUpkrK9EGPpUZJLjsPDT18uPA44E0mq
 
@@ -21,33 +21,33 @@ BASIC_AUTH=user:$2y$05$GsNMAR3c5Nxr32v//38L1eWUpkrK9EGPpUZJLjsPDT18uPA44E0mq
 ################################
 
 # Domain name
-SONARR_DOMAIN_NAME=sonarr.example.org
+SONARR_DOMAIN_NAME=tv.tpc.lan
 
 # Config folder to keep persistent config, files etc. (Mount point: /config)
 SONARR_CONFIG_PATH=/home/docker-data/sonarr/config
 
 # Finished TV Shows folder, for Sonarr to copy to. (Mount point: /tv)
-TV_SHOWS_PATH=/mnt/media/TV-Shows
+TV_SHOWS_PATH=/storage/archive/library/tv
 
 ################################
 #     Radarr Configuration     #
 ################################
 
 # Domain name
-RADARR_DOMAIN_NAME=radarr.example.org
+RADARR_DOMAIN_NAME=movies.tpc.lan
 
 # Config folder to keep persistent config, files etc. (Mount point: /config)
 RADARR_CONFIG_PATH=/home/docker-data/radarr/config
 
-# Finished TV Shows folder, for Sonarr to copy to. (Mount point: /tv)
-MOVIES_PATH=/mnt/media/Movies
+# Finished TV Shows folder, for Sonarr to copy to. (Mount point: /movies)
+MOVIES_PATH=/storage/archive/library/movies
 
 ################################
 #    Jackett Configuration     #
 ################################
 
 # Domain name
-JACKETT_DOMAIN_NAME=jackett.example.org
+JACKETT_DOMAIN_NAME=search.tpc.lan
 
 # Config folder to keep persistent config, files etc. (Mount point: /config)
 JACKETT_CONFIG_PATH=/home/docker-data/jackett/config
@@ -57,7 +57,7 @@ JACKETT_CONFIG_PATH=/home/docker-data/jackett/config
 ################################
 
 # Domain name
-RTORRENT_DOMAIN_NAME=rtorrent.example.org
+RTORRENT_DOMAIN_NAME=torrents.tpc.lan
 
 # The download folder. (Mount point: /downloads)
 TORRENT_DL_FOLDER=/home/docker-data/rtorrent/downloads
@@ -74,13 +74,13 @@ RTORRENT_CONFIG_PATH=/home/docker-data/rtorrent/config
 ################################
 
 # Domain name
-PLEX_DOMAIN_NAME=plex.example.org
+PLEX_DOMAIN_NAME=media.tpc.lan
 
 # Config directory
 PLEX_CONFIG_PATH=/home/docker-data/plex/config
 
 # Media directory
-PLEX_MEDIA_PATH=/mnt/media
+PLEX_MEDIA_PATH=/storage/archive/library
 
 # Trancode Directory
 PLEX_TRANSCODE_PATH=/home/docker-data/plex/trancode
@@ -120,7 +120,7 @@ TRAEFIK_ACME_FILE=/home/docker-data/traefik/acme.json
 
 # Bacuse of Lets Encrypt's rate limits on generating certifiactes you should use
 # their staging environment until you are certain that your certificate request works,
-# then uncomment below line to request the not-fake certificates.
+# then comment below line to request the not-fake certificates.
 STAGING_ENVIRONMENT=https://acme-staging-v02.api.letsencrypt.org/directory
 
 
