--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ BASIC_AUTH=user:$2y$05$GsNMAR3c5Nxr32v//38L1eWUpkrK9EGPpUZJLjsPDT18uPA44E0mq
 SONARR_DOMAIN_NAME=tv.tpc.lan
 
 # Config folder to keep persistent config, files etc. (Mount point: /config)
-SONARR_CONFIG_PATH=/home/docker-data/sonarr/config
+SONARR_CONFIG_PATH=/storage/archive/data/docker/sonarr/config
 
 # Finished TV Shows folder, for Sonarr to copy to. (Mount point: /tv)
 TV_SHOWS_PATH=/storage/archive/library/tv
@@ -37,7 +37,7 @@ TV_SHOWS_PATH=/storage/archive/library/tv
 RADARR_DOMAIN_NAME=movies.tpc.lan
 
 # Config folder to keep persistent config, files etc. (Mount point: /config)
-RADARR_CONFIG_PATH=/home/docker-data/radarr/config
+RADARR_CONFIG_PATH=/storage/archive/data/docker/radarr/config
 
 # Finished TV Shows folder, for Sonarr to copy to. (Mount point: /movies)
 MOVIES_PATH=/storage/archive/library/movies
@@ -50,7 +50,7 @@ MOVIES_PATH=/storage/archive/library/movies
 JACKETT_DOMAIN_NAME=search.tpc.lan
 
 # Config folder to keep persistent config, files etc. (Mount point: /config)
-JACKETT_CONFIG_PATH=/home/docker-data/jackett/config
+JACKETT_CONFIG_PATH=/storage/archive/data/docker/jackett/config
 
 ################################
 #    Rtorrent Configuration    #
@@ -60,14 +60,14 @@ JACKETT_CONFIG_PATH=/home/docker-data/jackett/config
 RTORRENT_DOMAIN_NAME=torrents.tpc.lan
 
 # The download folder. (Mount point: /downloads)
-TORRENT_DL_FOLDER=/home/docker-data/rtorrent/downloads
+TORRENT_DL_FOLDER=/storage/archive/data/docker/rtorrent/downloads
 
 # The rtorrent image puts its files in <download-dir>/incoming
 # and Sonarr + Radarr needs a path to the incoming folder.
-DL_COMPLETE_FOLDER=/home/docker-data/rtorrent/downloads/incoming
+DL_COMPLETE_FOLDER=/storage/archive/data/docker/rtorrent/downloads/incoming
 
 # Config directory
-RTORRENT_CONFIG_PATH=/home/docker-data/rtorrent/config
+RTORRENT_CONFIG_PATH=/storage/archive/data/docker/rtorrent/config
 
 ################################
 #      Plex Configuration      #
@@ -77,20 +77,20 @@ RTORRENT_CONFIG_PATH=/home/docker-data/rtorrent/config
 PLEX_DOMAIN_NAME=media.tpc.lan
 
 # Config directory
-PLEX_CONFIG_PATH=/home/docker-data/plex/config
+PLEX_CONFIG_PATH=/storage/archive/data/docker/plex/config
 
 # Media directory
 PLEX_MEDIA_PATH=/storage/archive/library
 
 # Trancode Directory
-PLEX_TRANSCODE_PATH=/home/docker-data/plex/trancode
+PLEX_TRANSCODE_PATH=/storage/archive/data/docker/plex/trancode
 
 # Claim token for Plex Server. Can be found at https://www.plex.tv/claim/
 # Remember claim codes are only valid for 4 min and you need it the first time you start Plex.
 PLEX_CLAIM_TOKEN=claim-code-goes-here
 
 # Plex Application log path
-PLEX_LOGS_PATH=/home/docker-data/plex/logs
+PLEX_LOGS_PATH=/storage/archive/data/docker/plex/logs
 
 ################################
 #    Tautulli Configuration    #
@@ -100,7 +100,7 @@ PLEX_LOGS_PATH=/home/docker-data/plex/logs
 TAUTULLI_DOMAIN_NAME=plexmon.example.org
 
 # Config directory
-TAUTULLI_CONFIG_PATH=/home/docker-data/tautulli/config
+TAUTULLI_CONFIG_PATH=/storage/archive/data/docker/tautulli/config
 
 ################################
 #    Traefik Configuration     #
@@ -110,13 +110,13 @@ TAUTULLI_CONFIG_PATH=/home/docker-data/tautulli/config
 LOG_LEVEL=info
 
 # Mail adresse that will be registeret to the Lets Encrypt certificates. 
-LE_EMAIL=mail@example.org
+LE_EMAIL=admin@example.org
 
 # Enable automatic Lets Encrypt certificates. true/false
 ENABLE_LETS_ENCRYPT=true
 
 # Path to acme.json, including the file. This is where the certificates are stored.
-TRAEFIK_ACME_FILE=/home/docker-data/traefik/acme.json
+TRAEFIK_ACME_FILE=/storage/archive/data/docker/traefik/acme.json
 
 # Bacuse of Lets Encrypt's rate limits on generating certifiactes you should use
 # their staging environment until you are certain that your certificate request works,
