--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ TIME_ZONE=Europe/Amsterdam
 # for Sonarr, Radarr, Rtorrent, Jackett, Tautulli and Traefik dashboard.
 # You can create your user:password string with the following docker command.
 #
-# docker run -it --rm httpd bash -c "htpasswd -nB void"
+# docker run -it --rm httpd bash -c "htpasswd -nB user"
 
-BASIC_AUTH=user:$2y$05$GsNMAR3c5Nxr32v//38L1eWUpkrK9EGPpUZJLjsPDT18uPA44E0mq
+BASIC_AUTH=void:$2y$05$iMN.Crk2wIX2iRgOb.8K0e1QaiB/VDrIHaicdkUHsj0dkzV.ZzIZe
 
 ################################
 #     Sonarr Configuration     #
